--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.14.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "2.21.2",
@@ -21,6 +22,7 @@
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
