--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -21,6 +21,10 @@
 	"rules": {
 		"prettier/prettier": "error",
 		"class-methods-use-this":"off",
+		"@typescript-eslint/no-unused-vars":[
+			"error", {
+				"argsIgnorePattern": "_"
+			}],
 		"import/extensions":[
 			"error",
 			"ignorePackages",
