Application of the Dependency Inversion Principle

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -25,6 +25,7 @@
 			"error", {
 				"argsIgnorePattern": "_"
 			}],
+		"no-useless-constructor": "off",
 		"import/extensions":[
 			"error",
 			"ignorePackages",
