--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -32,11 +32,12 @@
 			{
 				"ts": "never"
 			}
-		]
+		],
+		"import/no-unresolved": "off"
 	},
 	"settings": {
-		"import/resolver":{
-			"typescript": {}
-		}
-	}
+    "import/resolver": {
+      "typescript": {}
+    }
+  }
 }
